--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3191,12 +3191,8 @@ BEGIN
     "T",            ID_NETWORK_CONNECT_TO,  VIRTKEY, CONTROL, NOINVERT
     VK_F1,          ID_HELP_FAQ,            VIRTKEY, NOINVERT
     VK_F1,          ID_VIEW_PACKETS,        VIRTKEY, CONTROL, NOINVERT
-    VK_F10,         ID_VIEW_TRAFFIC,        VIRTKEY, NOINVERT
-    VK_F11,         ID_VIEW_SYSTEM,         VIRTKEY, NOINVERT
-    VK_F12,         ID_NETWORK_SEARCH,      VIRTKEY, NOINVERT
     VK_F2,          ID_LIBRARY_RENAME,      VIRTKEY, NOINVERT
     VK_F2,          ID_VIEW_SEARCH_MONITOR, VIRTKEY, CONTROL, NOINVERT
-    VK_F11,         ID_VIEW_NEIGHBOURS,     VIRTKEY, CONTROL, NOINVERT
     VK_F3,          ID_VIEW_DOWNLOADS,      VIRTKEY, NOINVERT
     VK_F3,          ID_VIEW_RESULTS_MONITOR, VIRTKEY, CONTROL, NOINVERT
     VK_F4,          ID_VIEW_UPLOADS,        VIRTKEY, NOINVERT
@@ -3205,6 +3201,10 @@ BEGIN
     VK_F7,          ID_VIEW_SECURITY,       VIRTKEY, NOINVERT
     VK_F8,          ID_VIEW_HOSTS,          VIRTKEY, NOINVERT
     VK_F9,          ID_VIEW_DISCOVERY,      VIRTKEY, NOINVERT
+    VK_F10,         ID_VIEW_TRAFFIC,        VIRTKEY, NOINVERT
+    VK_F11,         ID_VIEW_SYSTEM,         VIRTKEY, NOINVERT
+    VK_F11,         ID_VIEW_NEIGHBOURS,     VIRTKEY, CONTROL, NOINVERT
+    VK_F12,         ID_TAB_IRC,             VIRTKEY, NOINVERT
     VK_UP,          ID_LIBRARY_PARENT,      VIRTKEY, ALT, NOINVERT
     "Z",            ID_TOOLS_RESKIN,        VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
