--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3718,6 +3718,7 @@ BEGIN
                             "You're not connected.  Click the Connect button to get started."
     IDS_TABBAR_CONNECTED    "There are no active searches.  Click here to search for files."
     IDS_UPGRADE_LAUNCH      "Shareaza has finished downloading the next Shareaza version (%s).  Would you like to upgrade now?\n\nIf you select Yes, Shareaza will close temporarily while the upgrade is installed."
+    IDS_UPGRADE_NO_NEW      "No new Shareaza version detected."
     IDS_SKIN_DELETE         "Are you sure you want to delete the ""%s"" skin?  This cannot be undone."
     IDS_BETA_EXPIRED        "This is a pre-release version of Shareaza, and the beta testing period has ended.  Please download the full, official release from http://shareaza.sourceforge.net/."
     IDS_VIEW_MODE_CONFIRM   "Changing view will close any windows you have open.  Would you like to change now?"
