Fixed resizing of the folder properties dialog
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6650 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1223,7 +1223,7 @@ BEGIN
 END
 
 IDD_FOLDER_PROPERTIES DIALOGEX 0, 0, 236, 198
-STYLE DS_SETFONT | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Album Folder Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
