--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3819,7 +3819,7 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_HASH_MESSAGE        "Shareaza is creating hashes for %i file(s):"
+    IDS_HASH_MESSAGE        "Shareaza is creating hashes for %Iu file(s):"
     IDS_DLM_TIME_DAH        "%i days and %i hours"
 END
 
