Add XML.inl to project file lists.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6695 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -3469,6 +3469,10 @@
 				>
 			</File>
 			<File
+				RelativePath="XML.inl"
+				>
+			</File>
+			<File
 				RelativePath="XMLCOM.h"
 				>
 			</File>
