--- a/vc7_1/Shareaza.vcproj
+++ b/vc7_1/Shareaza.vcproj
@@ -892,6 +892,9 @@
 				RelativePath="..\shareaza\XML.cpp">
 			</File>
 			<File
+				RelativePath="..\shareaza\XML.inl">
+			</File>
+			<File
 				RelativePath="..\shareaza\XMLCOM.cpp">
 			</File>
 			<File
