--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -2757,6 +2757,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\shareaza\XML.inl"
+				>
+			</File>
+			<File
 				RelativePath="..\shareaza\XMLCOM.h"
 				>
 			</File>
