Added a dynamic Z-ordered bar for actions with ShareMonkey webservice
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6711 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -5236,6 +5236,13 @@ BEGIN
     ID_WEBSERVICES_LIST     "Choose the web service to get more information about the selected file."
     ID_WEBSERVICES_SHAREMONKEY 
                             "Search for the file infomation using ShareMonkey service."
+    ID_SHAREMONKEY_DOWNLOAD "Search for matches"
+    ID_SHAREMONKEY_SAVE     "Save the match in your Library"
+    ID_SHAREMONKEY_PREVIOUS "Go to the previous match"
+    ID_SHAREMONKEY_NEXT     "Go to the next match"
+    ID_SHAREMONKEY_PRICES   "Look at the prices for the current match"
+    ID_SHAREMONKEY_COMPARE  "Compare prices in different stores"
+    ID_SHAREMONKEY_BUY      "Buy it and support the author"
 END
 
 #endif    // English (Australia) resources
